# pybazel

./: .gitignore  README.md  WORKSPACE
core/hello/: BUILD.bazel  test.py
notebooks/: BUILD.bazel  hello.ipynb
projects/hello/: BUILD.bazel  main.py
projects/mnist/: BUILD.bazel  main.py
projects/tensorflow/: BUILD.bazel  main.py
projects/torch/: BUILD.bazel  main.py
tools/black/: BUILD
tools/flake8/: BUILD
tools/isort/: BUILD
tools/jupyter/: BUILD.bazel  defs.bzl
